--- a/macros.tex
+++ b/macros.tex
@@ -111,7 +111,7 @@
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
 
 %problem environment
-\newenvironment{problem}[2][Problem]{\large \begin{trivlist}
+\newenvironment{problem}[2][Problem]{ \begin{trivlist}
 \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
 
 %problems list environment
