--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \newtheorem{lemma}{Lemma}[chapter]
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{corollary}{Corollary}[chapter]
+\newtheorem{definition}{Definition}[chapter]
 
 \title{\textsc{Problems and Solutions:} \\ 
 \textit{Theory of Probability and Random Processes, 2\textsuperscript{nd} Edition} \\ 
@@ -44,9 +45,14 @@
 \chapter{Laws of Large Numbers}
 \input{chpts/chpt7.tex}
 
+\chapter{Weak Convergence of Measures}
+\input{chpts/chpt8.tex}
+
 
 
 \begin{appendices}
+\chapter{Other Probability Lemmas}
+\input{appendices/prob}
 \chapter{Useful Matrix Lemmas}
 \input{appendices/matrix.tex}
 \end{appendices}
